Closed Bug 189307 Opened 23 years ago Closed 22 years ago

typeahead initializes sound when it's uninitialized instead of if it's unitialized and there's a sound to play

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: uhlar, Assigned: timeless)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030115 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030115 after starting mozilla, the esd daemon is run always, even if no sound is produced. It disables access to sound device. This did not happen with 1.2.1 this is build from 2003011500 UTC Reproducible: Always Steps to Reproduce: 1. 2. 3. Expected Results: esd should only be called if it's needed.
This does indeed happen on my box running 2003020420.
Duplicate of Bug 188155?
I wouldn't say so - bug 188155 seems to be caused by preference setting - play a sound in typing in a page. I have turned off all sounds and don't want mozilla to play anything. about bug 188155 - I tried playing sound in web page search and when new mail arrives, but only got beep from pc speaker - no sound. but that belongs probably to bug 188155...
I want to confirm that this bug still exists on mozilla 1.3.1. Start up mozilla and then do a ps ax, and you should notice that esd is running. Even when accessability.typeaheadfind.enablesound is disabled, esd still starts. esd does cause a lot of problems with other programs that want use the sound card, especially wineX in my instance, so I recommend that esd only be started if the user requests it. Thanks
It looks that this bug has disappeared from newer versions of mozilla. Thank you.
This happens to me with Mozilla 1.4rc1. It's very annoying. It starts the daemon when I start typing at the address field, then it makes some noise for a while.
This happens to me with Mozilla 1.4rc1. It's very annoying. It starts the daemon when I start typing at the address field, then it makes some noise for a while.
berarma@ya.com: does this happen with 1.6 of mozilla?
I tried official mozilla-1.6a and own build of 2 days old cvs (but newer than 1.6a) and found out that both start esd, when: - preference accessibility.typeaheadfind.autostart is true even if accessibility.typeaheadfind.enablesound is false - I press any key in browser's window, including alt It does not happen on other my notebook, where the dirfferencies are - multichannel sound card (does mozilla really detect this?) - 104-character keyboard (shouldn't affect that) I hope these will help find out what's happening...
Summary: esd run on mozilla startup alwaya → esd run on mozilla startup always
Thanks for the investigation.
Assignee: asa → aaronlev5
Component: Browser-General → Accessibility APIs
Attached patch rightSplinter Review
Attachment #135251 - Flags: review?(caillon)
.
Assignee: aaronlev5 → timeless
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: esd run on mozilla startup always → typeahead initializes sound when it's uninitialized instead of if it's unitialized and there's a sound to play
Attachment #135251 - Flags: superreview?(roc)
Attachment #135251 - Flags: superreview?(roc) → superreview+
Attachment #135251 - Flags: review?(caillon) → review+
looking back at it, it really seems to be a duplicate od bug 188155
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 188155 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: