Bug 189307 typeahead initializes sound when it's uninitialized instead of if it's unitialized and there's a sound to play r=caillon sr=roc